force-app/main/default/objects/OnlinePayment__c/OnlinePayment__c.object-meta.xml
<CustomObject>
    <label>Online Payment</label>
    <nameField>
        <displayFormat>OPA-{000000000}</displayFormat>
        <label>Online Payment Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>