force-app/main/default/objects/OnlinePayment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Online_Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>