force-app/main/default/objects/OnlinePayment__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>Holds SAP invoice number from mobile app request to resolve the Invoice__c lookup via Invoice__r.SapInvoiceNumber__c</description>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>