force-app/main/default/objects/OnlinePayment__c/fields/RequestSource__c.field-meta.xml
<CustomField>
    <fullName>RequestSource__c</fullName>
    <label>Request Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MobileApp</fullName>
                <label>Mobile App</label>
            </value>
            <value>
                <fullName>WebPortal</fullName>
                <label>Web Portal</label>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>QuickPay</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>