force-app/main/default/objects/OnlinePayment__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccessCard</fullName>
            </value>
            <value>
                <fullName>Amenity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>