force-app/main/default/objects/OnlinePayment__c/fields/TechnologyFee__c.field-meta.xml
<CustomField>
    <fullName>TechnologyFee__c</fullName>
    <label>Technology Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>